--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.animate-marquee:hover {
+  animation-play-state: paused;
+}
